<resources>
    <string name="app_name">VehicleTrackerSystemApp</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="solicitar_veh_culo">Solicitar Vehículo</string>
    <string name="reportar_aver_as">Reportar Averías</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_destino">Ingrese Destino</string>
    <string name="parque_ulloa">Parque Ulloa</string>
    <string name="justificaci_n">Justificación</string>
    <string name="entrega_de_material">Entrega de material</string>
    <string name="realizar_solicitud">Realizar Solicitud</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="estado_de_la_solicitud">Estado de la solicitud</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="selecionar_hora_final">Selecionar hora final</string>
    <string name="seleccionar_hora_inicio">Seleccionar hora inicio</string>
    <string name="activar_gps">Activar GPS</string>
    <string name="no_hay_coordenadas">-No hay coordenadas-</string>
    <string name="ninguna_direccion">-Ninguna direccion-</string>
    <string name="www_vtsmsph_com">www.vtsmsph.com</string>
    <string name="usuario">Usuario:</string>
    <string name="todo">TODO</string>
    <string name="title_activity_location_view">Map</string>
    <string name="iniciar">Iniciar</string>
    <string name="hibrido">Hibrido</string>
    <string name="terreno">Terreno</string>
    <string name="satelite">Satelite</string>
    <string name="terminar_recorrido">Terminar Recorrido</string>
    <string name="normal">Normal</string>
    <string name="puede_cambiar_el_tipo_d_emapa_si_lo_deseea">Puede cambiar el tipo d emapa si lo deseea</string>
    <string name="cedula">Cedula</string>
    <string name="veh_culo">Vehículo</string>

</resources>
